[tool.poetry]
name = "book-fowler-asyncio"
version = "0.1.0"
description = ""
authors = ["Konstantin.Dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "book_fowler_asyncio" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.scripts]
start = "ch02.listing_2_7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
