[tool.black]
line-length = 80


[tool.poetry]
name = "book-fowler-asyncio"
version = "0.1.0"
description = ""
authors = ["Konstantin.Dudersky <konstantin.dudersky@gmail.com>"]
readme = "README.md"
packages = [{ include = "book_fowler_asyncio" }]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
aiohttp = "^3.8.4"
asyncpg = "^0.27.0"
numpy = "^1.24.3"
psycopg2 = "^2.9.6"
flask = "^2.3.2"
starlette = "^0.26.1"
websockets = "^11.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
